[tool.poetry]
name = "kenna"
version = "0.0.4"
description = ""
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"

[tool.poetry.scripts]
kenna = "kenna.cli:cli"

[tool.poetry.dependencies]
python = ">=3.6.0,<4"
click = "~=7.0"
hodgepodge = "^0.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
