[tool.poetry]
name = "kenna"
version = "0.1.0"
description = ""
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"

[tool.poetry.scripts]
kenna = "kenna.cli:cli"

[tool.poetry.dependencies]
python = ">=3.6.0,<4"
click = "~=7.0"
hodgepodge = "^0.3.5"
antlr4-python3-runtime = "^4.9.2"
certifi = "^2021.5.30"
dacite = "^1.6.0"
DAWG = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
